<resources>
    <string name="app_name">QrBarScanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>
    <string name="update">Update</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Support for only Android devices.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_Delete_all">Delete All</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">History</string>
    <string name="menu_slideshow">Help</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_terms_condition">Terms &amp; Conditions</string>
    <string name="menu_message">Message</string>
    <string name="app_version">App Version </string>

    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">Upload from gallery</string>
    <string name="todo">TODO</string>
    <string name="resultTitle">Result</string>

    <!-- QrScan Result Strings  -->
    <string name="QrScanTitle">QRScan Result</string>
    <string name="code_type_string"> %1$s Scan Result</string>

    <!-- QrCode Buttons -->
    <string name="qrBtn">QRcode</string>
    <string name="barcodeBtn">Barcode</string>
    <string name="galleryBtn">Gallery</string>
    <string name="scan_below_code">Scan below Code</string>
    <string name="description">Description</string>

    <string name="phone">Phone no:</string>
    <string name="phone_num">8978389829</string>
    <string name="email">E-mail:</string>
    <string name="email_id">abhiram.playstoree@gmail.com</string>

    <!--  QrScanner View  -->
    <string name="title">QR Scanner</string>
    <string name="subTitle">Align QR code within the frame</string>

    <!--    alertDialogBox Strings-->
    <string name="alertTitle">Are You Sure ?</string>
    <string name="OK">OK</string>
    <string name="image">Image</string>
    <string name="accept">Accept</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="i_agree_to">"I agree to the "</string>
    <string name="address">Address</string>
    <string name="qr_code">Qr Code</string>

    <!--  EnterDetailsActivity -->
    <string name="enter_clipboard_text">Enter Text</string>
    <string name="enter_phoneNumber">Enter Phone number</string>
    <string name="enter_facebookUrl">FaceBook URL</string>
    <string name="enter_message">Enter message</string>
    <string name="id_name">Enter Name</string>
    <string name="id_email">Enter E-mail</string>
    <string name="id_address">Enter Full Address</string>
    <string name="enter_whatsappNo">Whatsapp number</string>
    <string name="enter_URL">URL</string>
    <string name="enter_location">Enter Location</string>
    <!-- setErrorStrings -->
    <string name="enter_value">please Enter a value!…</string>
    <string name="enter_validEmail">Enter valid email@gmail.com</string>
    <string name="enter_validPhoneNo">Enter valid Phone no :</string>
    <string name="empty_value">Empty</string>
    <string name="enter_validURL">Enter valid URL https://www.google.com</string>

    <!-- showToast Messages  -->
    <string name="GPS_OFF">GPS OFF</string>
    <string name="address_not_found">OnActivityResult not found address!..</string>
    <string name="aboutus_des"><![CDATA[Scanning Capabilities: The core function of the app is to scan QR & Barcode accurately and quickly. Users typically point their device\'s camera at the QR code, and the app automatically recognizes and decodes it.\n\nCode Interpretation: Once a QR code is scanned, the app may provide options to interpret the information contained within it. For example, if user scans any code then it will display the data and that data can be copied to clipboard.\n\nHistory: Many QR code scanner apps keep a history of previously scanned codes, allowing users to revisit or reuse the information without rescanning.\n\nContact Information: It has \"My Card\" option to generate QR code of the user \nLocation: It also generate QR code for the current Location automatically.(For this User should On the GPS).\n\nFlashlight Support: Many apps include a flashlight feature to assist with scanning codes in low-light conditions.\nOffline Capability: Some apps can decode QR codes even when you\'re not connected to the internet.]]></string>
    <string name="main_content">Main Content</string>
    <string name="nodata_found">No History Data found</string>
    <string name="code_scan_view">code scan view</string>
    <string name="copy_but">copy but</string>
    <string name="delete_item">delete item</string>
    <string name="arrow_item">arrow item</string>
    <string name="cancel_scaner">cancel scaner</string>
    <string name="choose_qr">choose qr</string>
    <string name="qr_btn">qr btn</string>
    <string name="bar_btn">bar btn</string>
    <string name="card_view">cardview</string>
    <string name="passed_data">passed data</string>

   <!--  showDialog string -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>