<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_dashbord_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/history_icon"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/contact_us_black"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/aboutus"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_terms_conditions"
            android:icon="@drawable/tcn"
            android:title="@string/menu_terms_condition" />
        <item
            android:id="@+id/nav_slideshow"
            android:visible="false"
            android:icon="@drawable/help_icon"
            android:title="@string/menu_slideshow" />
    </group>
</menu>