<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.abhiram.qrbarscanner.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.abhiram.qrbarscanner.ui.history.HistoryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.abhiram.qrbarscanner.ui.help.HelpFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_terms_conditions"
        android:name="com.abhiram.qrbarscanner.ui.termscond.TermsConditionsFragment"
        android:label="@string/menu_terms_condition"
        tools:layout="@layout/fragment_terms_conditions" />
    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.abhiram.qrbarscanner.ui.contactus.ContactusFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contactus" />
    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.abhiram.qrbarscanner.ui.aboutus.AboutusFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_aboutus" />
</navigation>