<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.contactus.ContactusFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/QrScanTitle"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/contactus"
            android:contentDescription="@string/todo" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="45dp"
            android:elevation="4dp"
            android:backgroundTint="@color/light_grey"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@+id/titleQRResult">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:drawableRight="@drawable/baseline_phone_enabled_24"
                    android:textSize="@dimen/font_sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/contactus_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_num"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:drawableRight="@android:drawable/ic_dialog_email"
                    android:textSize="@dimen/font_sp"
                    android:drawableTint="@color/black"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/contactus_email_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_id"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</FrameLayout>