<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.aboutus.AboutusFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QrScanTitle"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_five_sp"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/twenty_dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/QRCodeImg"
        android:layout_width="@dimen/two_hundred_dp"
        android:layout_height="@dimen/one_fifty_dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/twenty_dp"
        android:src="@drawable/about_us"
        android:contentDescription="@string/todo" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/forty_five_dp"
        android:elevation="@dimen/four_dp"
        android:backgroundTint="@color/light_grey"
        app:cardCornerRadius="@dimen/twenty_dp"
        app:layout_constraintTop_toBottomOf="@+id/titleQRResult">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="@dimen/font_sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/QrResult2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/aboutus_des"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/forty_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/versions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textSize="@dimen/sixteen_sp"

                />
            <TextView
                android:id="@+id/Abtversions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/purple_500"
                android:layout_marginStart="@dimen/four_dp"
                android:textSize="@dimen/sixteen_sp"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

</ScrollView>