<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.termscond.TermsConditionsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/accept_all"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_width="@dimen/eighty_dp"
        android:layout_height="@dimen/eighty_dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/twenty_dp"
        android:src="@drawable/tc"
        android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_terms_condition"
            android:textSize="@dimen/font_sp"
            android:textAlignment="center"
            android:layout_margin="@dimen/nav_header_vertical_spacing"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:background="@drawable/rectanular_border"
            android:id="@+id/terms_con_recycler"
            android:layout_margin="@dimen/nav_header_vertical_spacing"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


    <Button
        android:id="@+id/accept_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:textAllCaps="false"
        android:visibility="gone"
        android:elevation="@dimen/four_dp"
        android:layout_margin="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toBottomOf="parent">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>