<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GenerateQRorBarActivity">

    <TextView
        android:id="@+id/generate_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/four_dp"
        android:text="@string/scan_below_code"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="@dimen/twentyfive_sp"
        android:textColor="@color/purple_500"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/qr_bar_imv">

    </TextView>
    <!-- ImageView -->
    <ImageView
        android:id="@+id/qr_bar_imv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/qr_black"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@+id/generate_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/data_content_tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/four_dp"
        android:textAlignment="center"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="@+id/qr_bar_imv"
        app:layout_constraintEnd_toEndOf="@+id/qr_bar_imv"
        app:layout_constraintTop_toBottomOf="@+id/qr_bar_imv"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout2">

    </TextView>

    <!-- Button Layout -->
    <LinearLayout
        android:id="@+id/buttonLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/fifty_dp"
        app:layout_constraintTop_toBottomOf="@+id/data_content_tv2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- First Button -->
        <Button
            android:id="@+id/save_but"
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:background="@drawable/gradient"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/four_dp"
            android:layout_weight="1"
            android:text="@string/save" />

        <!-- Second Button -->
        <Button
            android:id="@+id/share_but"
            android:layout_width="0dp"
            android:background="@drawable/gradient"
            android:textAllCaps="false"
            android:layout_margin="@dimen/four_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>